--- a/style.css
+++ b/style.css
@@ -3,3 +3,117 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:root {
+    --red: hsl(0, 78%, 62%);
+    --cyan: hsl(180, 62%, 55%);
+    --orange: hsl(34, 97%, 64%);
+    --blue: hsl(212, 86%, 64%);
+
+    --very-dark-blue: hsl(234, 12%, 34%);
+    --grayish-blue: hsl(229, 6%, 66%);
+    --very-light-gray: hsl(0, 0%, 98%);
+    --34px: 2.125rem;
+    --24px: 1.5rem;
+    --10px: .625rem;
+    --14px: .875rem;
+    --18px: 1.125rem;
+     
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    background-color: var(--very-light-gray);
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    padding: var(--34px)
+}
+
+.content {
+    text-align: center;
+}
+
+.content__title {
+    font-size: var(--24px);
+    color: var(--very-dark-blue);
+    margin-bottom: var(--10px);
+    font-weight: 200;
+}
+
+.content__subtitle {
+    font-size: var(--24px);
+    color: var(--very-dark-blue);
+    margin-bottom: var(--18px);
+    font-weight: 600;
+}
+
+.content__description {
+    font-size: var(--14px);
+    color: var(--grayish-blue);
+    margin-bottom: var(--34px);
+    font-weight: 200;
+    line-height: 180%;
+    letter-spacing: 4%;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: var(--24px);
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: var(--24px);
+    box-sizing: border-box;
+    border-top: 4px solid;
+    border-color: var(--red);
+    border-radius: 10px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.card__title {
+    font-size: var(--18px);
+    color: var(--very-dark-blue);
+    margin-bottom: var(--10px);
+    font-weight: 600;
+}
+
+.card__description {
+    color: var(--grayish-blue);
+    margin-bottom: var(--34px);
+    font-weight: 200;
+    line-height: 180%;
+    letter-spacing: 4%;
+}
+
+.card__icon {
+    align-self: flex-end;
+}
+
+.card--supervisor {
+    border-color: var(--cyan);
+}
+
+.card--team-builder {
+    border-color: var(--red);
+}
+
+.card--karma {
+    border-color: var(--orange);
+}
+
+.card--calculator {
+    border-color: var(--blue);
+}   
+
