--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     --10px: .625rem;
     --14px: .875rem;
     --18px: 1.125rem;
+    --80px: 5rem;
      
 }
 
@@ -43,7 +44,6 @@ main {
 .content__title {
     font-size: var(--24px);
     color: var(--very-dark-blue);
-    margin-bottom: var(--10px);
     font-weight: 200;
 }
 
@@ -57,10 +57,12 @@ main {
 .content__description {
     font-size: var(--14px);
     color: var(--grayish-blue);
-    margin-bottom: var(--34px);
+    margin-bottom: 5rem;
     font-weight: 200;
     line-height: 180%;
     letter-spacing: 4%;
+    word-wrap: break-word;
+    max-width: 31.25rem;
 }
 
 .cards {
@@ -80,6 +82,7 @@ main {
     border-color: var(--red);
     border-radius: 10px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    max-width: 21.875rem;
 }
 
 .card__title {
@@ -116,4 +119,41 @@ main {
 .card--calculator {
     border-color: var(--blue);
 }   
+
+@media (min-width: 1024px) {
+    .content__title {
+        font-size: var(--34px);
+    }
+    .content__subtitle {
+        font-size: var(--34px);
+    }
+    .content__description {
+        font-size: var(--14px);
+    }
+
+    .cards {
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+    }
+
+    .card--supervisor {
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+    }
+
+    .card--team-builder {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+
+    .card--karma {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    .card--calculator {
+        grid-column: 3 / 4;
+        grid-row: 1 / 3;
+    }
+}
 
